tests/module/mod124.stderr

mod124.hs:6:6: error: [GHC-76037]
    Not in scope: type constructor or class ‘T’
    Suggested fix:
      Remove ‘T’ from the explicit hiding list in the import of
      ‘Mod124_A’ (at mod124.hs:4:1-26).
